--- a/phapl.html
+++ b/phapl.html
@@ -1,4 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!-- Copyright © 2018 Aleksey Cherepanov <lyosha@openwall.com> -->
+<!-- Redistribution and use in source and binary forms, with or without modification, are permitted. -->
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -9,7 +11,7 @@
       .container { width: 90%; border: 1px solid black; padding: 10px; }
     </style>
 
-    <script type="text/javascript" src="lib/mathjax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <script type="text/x-mathjax-config">
       MathJax.Hub.Config({
           displayAlign: "left"
