--- a/phapl.html
+++ b/phapl.html
@@ -11,7 +11,10 @@
       .container { width: 90%; border: 1px solid black; padding: 10px; }
     </style>
 
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script type="text/javascript" src="lib/mathjax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script type="text/javascript">
+      MathJax || document.write('<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"><\/script>');
+    </script>
     <script type="text/x-mathjax-config">
       MathJax.Hub.Config({
           displayAlign: "left"
