--- a/phapl.html
+++ b/phapl.html
@@ -13,7 +13,7 @@
 
     <script type="text/javascript" src="lib/mathjax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <script type="text/javascript">
-      MathJax || document.write('<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"><\/script>');
+      window.MathJax || document.write('<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"><\/script>');
     </script>
     <script type="text/x-mathjax-config">
       MathJax.Hub.Config({
