--- a/phapl.en.html
+++ b/phapl.en.html
@@ -508,8 +508,8 @@ function phapl_setup_canvases(phapl_canvases, phapl_all_points)
       <h2>PhaPl</h2>
       <p>PhaPl is a software to research and plot phase portraits of autonomous systems of 2 differential equations on a plane. PhaPl works as a site or as a local html-page that works offline.</p>
       <p><a href="#" onclick="document.getElementById('phapl_div_choose').scrollIntoView({ 'behaviour' : 'smooth' }); return false">Go to task input/choice below.</a></p>
-      <p><a href="https://github.com/phapl/phapl.github.io/archive/master.zip">Download archive for local offline use.</a> (~9 MB to download, ~37 MB to be stored unpacked on disk)</p>
-      <p>Current version was published on: 2018-05-27 02:22 +0300.</p>
+      <p><a href="https://github.com/phapl/phapl.github.io/archive/master.zip">Download archive for local offline use</a> (~9 MB to download, ~37 MB to be stored unpacked on disk).</p>
+      <p>This version was published on: 2018-05-27 02:31 +0300.</p>
       <p>You are welcome to send your suggestions and reports about errors / bugs / problems through <a href="https://github.com/phapl/phapl.github.io/issues">GitHub</a>.</p>
     </div>
     <div class="container" id="phapl_div_choose">
