--- a/phapl.ru.html
+++ b/phapl.ru.html
@@ -508,8 +508,8 @@ function phapl_setup_canvases(phapl_canvases, phapl_all_points)
       <h2>PhaPl</h2>
       <p>PhaPl - программное обеспечение для автоматического построения и исследования фазовых портретов автономных динамических систем на плоскости. PhaPl работает как сайт или как локальная html-страница, не требующая подключения к сети Интернет.</p>
       <p><a href="#" onclick="document.getElementById('phapl_div_choose').scrollIntoView({ 'behaviour' : 'smooth' }); return false">Перейти к выбору/вводу задачи ниже.</a></p>
-      <p><a href="https://github.com/phapl/phapl.github.io/archive/master.zip">Скачать архив для локального использования</a> (~9 МБ для скачивания, ~37 МБ на диске после распаковки)</p>
-      <p>Дата публикации этой версии: 2018-05-27 02:22 +0300.</p>
+      <p><a href="https://github.com/phapl/phapl.github.io/archive/master.zip">Скачать архив для локального использования</a> (~9 МБ для скачивания, ~37 МБ на диске после распаковки).</p>
+      <p>Дата публикации этой версии: 2018-05-27 02:31 +0300.</p>
       <p>Об ошибках, недостатках и возможностях улучшения можно сообщить через <a href="https://github.com/phapl/phapl.github.io/issues">GitHub</a>.</p>
     </div>
     <div class="container" id="phapl_div_choose">
