fixed lack of color reset

--- a/phapl.ru.html
+++ b/phapl.ru.html
@@ -138,6 +138,7 @@
               } else {
                   document.getElementById('dot_x').value = h[0];
                   document.getElementById('dot_y').value = h[1];
+                  phapl_reset_color();
                   if (start_p) {
                       phapl_do();
                   } else {
@@ -551,7 +552,7 @@ function phapl_setup_canvases(phapl_canvases, phapl_all_points)
       <p>PhaPl - программное обеспечение для автоматического построения и исследования фазовых портретов автономных динамических систем на плоскости. PhaPl работает как сайт или как локальная html-страница, не требующая подключения к сети Интернет.</p>
       <p><a href="#" onclick="scroll_to('phapl_div_choose'); return false">Перейти к выбору/вводу задачи ниже.</a></p>
       <p><a href="https://github.com/phapl/phapl.github.io/archive/master.zip">Скачать архив для локального использования</a> (~9 МБ для скачивания, ~37 МБ на диске после распаковки).</p>
-      <p>Дата публикации этой версии: 2018-05-28 21:19 +0300.</p>
+      <p>Дата публикации этой версии: 2018-05-28 21:23 +0300.</p>
       <p>"Math Processing Error" везде означает проблему с кешем. Обновление страницы в обход кеша должно помочь (Shift-F5 в Chrome'е, Control-F5 в Firefox'е).</p>
       <p>Об ошибках, недостатках и возможностях улучшения можно сообщить через <a href="https://github.com/phapl/phapl.github.io/issues">GitHub</a>.</p>
     </div>
