--- a/phapl.en.html
+++ b/phapl.en.html
@@ -4,7 +4,7 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>phapl: Phase Plane Helper</title>
+    <title>PhaPl: Phase Plane Helper</title>
     <style>
       body { font-size: 140%; }
       input { width: 600px; }
@@ -564,7 +564,7 @@ function phapl_setup_canvases(phapl_canvases, phapl_all_points)
       <p>PhaPl is a software to research and plot phase portraits of autonomous systems of 2 differential equations on a plane. PhaPl works as a site or as a local html-page that works offline.</p>
       <p><a href="#" onclick="scroll_to('phapl_div_choose'); return false">Go to task input/choice below.</a></p>
       <p><a href="https://github.com/phapl/phapl.github.io/archive/master.zip">Download archive for local offline use</a> (~9 MB to download, ~37 MB to be stored unpacked on disk).</p>
-      <p>This version was published on: 2018-06-06 01:19 +0300.</p>
+      <p>This version was published on: 2018-06-21 00:18 +0300.</p>
       <p>"Math Processing Error" everywhere should be a problem with cache. Refreshing of page bypassing cache should help (press Shift-F5 in Chrome or Control-F5 in Firefox).</p>
       <p>You are welcome to send your suggestions and reports about errors / bugs / problems through <a href="https://github.com/phapl/phapl.github.io/issues">GitHub</a>.</p>
     </div>
