--- a/phapl.ru.html
+++ b/phapl.ru.html
@@ -4,7 +4,7 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>phapl: Phase Plane Helper</title>
+    <title>PhaPl: Phase Plane Helper</title>
     <style>
       body { font-size: 140%; }
       input { width: 600px; }
@@ -564,7 +564,7 @@ function phapl_setup_canvases(phapl_canvases, phapl_all_points)
       <p>PhaPl - программное обеспечение для автоматического построения и исследования фазовых портретов автономных динамических систем на плоскости. PhaPl работает как сайт или как локальная html-страница, не требующая подключения к сети Интернет.</p>
       <p><a href="#" onclick="scroll_to('phapl_div_choose'); return false">Перейти к выбору/вводу задачи ниже.</a></p>
       <p><a href="https://github.com/phapl/phapl.github.io/archive/master.zip">Скачать архив для локального использования</a> (~9 МБ для скачивания, ~37 МБ на диске после распаковки).</p>
-      <p>Дата публикации этой версии: 2018-06-06 01:19 +0300.</p>
+      <p>Дата публикации этой версии: 2018-06-21 00:18 +0300.</p>
       <p>"Math Processing Error" везде означает проблему с кешем. Обновление страницы в обход кеша должно помочь (Shift-F5 в Chrome'е, Control-F5 в Firefox'е).</p>
       <p>Об ошибках, недостатках и возможностях улучшения можно сообщить через <a href="https://github.com/phapl/phapl.github.io/issues">GitHub</a>.</p>
     </div>
