added link to sources; built cleanly

--- a/phapl.en.html
+++ b/phapl.en.html
@@ -1,4 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!-- Generated html may include non-free tasks and be non-redistributable. -->
+<!-- phapl_tpl.html, template: -->
 <!-- Copyright © 2018 Aleksey Cherepanov <lyosha@openwall.com> -->
 <!-- Redistribution and use in source and binary forms, with or without modification, are permitted. -->
 <html>
@@ -563,9 +565,12 @@ function phapl_setup_canvases(phapl_canvases, phapl_all_points)
       <p>PhaPl is a software to research and plot phase portraits of autonomous systems of 2 differential equations on a plane. PhaPl works as a site or as a local html-page that works offline.</p>
       <p><a href="#" onclick="scroll_to('phapl_div_choose'); return false">Go to task input/choice below.</a></p>
       <p><a href="https://github.com/phapl/phapl.github.io/archive/master.zip">Download archive for local offline use</a> (~9 MB to download, ~37 MB to be stored unpacked on disk).</p>
-      <p>This version was published on: 2018-07-29 10:17 +0300.</p>
+      <p>This version was published on: 2018-07-29 14:31 +0300.</p>
       <p>"Math Processing Error" everywhere should be a problem with cache. Refreshing of page bypassing cache should help (press Shift-F5 in Chrome or Control-F5 in Firefox).</p>
       <p>You are welcome to send your suggestions and reports about errors / bugs / problems through <a href="https://github.com/phapl/phapl.github.io/issues">GitHub</a>.</p>
+      <p>PhaPl uses modified SymPy, PyPy.js, MathJax, LZMA-JS. There is full info about that in <a href="https://github.com/phapl/phapl">the repo with the sources of PhaPl</a>.</p>
+      <!-- %% pull license info from the sets -->
+      <p>PhaPl wants to be Free Software, but this page can include sets of tasks that prohibit redistribution.</p>
     </div>
     <div class="container" id="phapl_div_choose">
       <h2>Choose task</h2>
