--- a/phapl.ru.html
+++ b/phapl.ru.html
@@ -1,4 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!-- Generated html may include non-free tasks and be non-redistributable. -->
+<!-- phapl_tpl.html, template: -->
 <!-- Copyright © 2018 Aleksey Cherepanov <lyosha@openwall.com> -->
 <!-- Redistribution and use in source and binary forms, with or without modification, are permitted. -->
 <html>
@@ -563,9 +565,12 @@ function phapl_setup_canvases(phapl_canvases, phapl_all_points)
       <p>PhaPl - программное обеспечение для автоматического построения и исследования фазовых портретов автономных динамических систем на плоскости. PhaPl работает как сайт или как локальная html-страница, не требующая подключения к сети Интернет.</p>
       <p><a href="#" onclick="scroll_to('phapl_div_choose'); return false">Перейти к выбору/вводу задачи ниже.</a></p>
       <p><a href="https://github.com/phapl/phapl.github.io/archive/master.zip">Скачать архив для локального использования</a> (~9 МБ для скачивания, ~37 МБ на диске после распаковки).</p>
-      <p>Дата публикации этой версии: 2018-07-29 10:17 +0300.</p>
+      <p>Дата публикации этой версии: 2018-07-29 14:31 +0300.</p>
       <p>"Math Processing Error" везде означает проблему с кешем. Обновление страницы в обход кеша должно помочь (Shift-F5 в Chrome'е, Control-F5 в Firefox'е).</p>
       <p>Об ошибках, недостатках и возможностях улучшения можно сообщить через <a href="https://github.com/phapl/phapl.github.io/issues">GitHub</a>.</p>
+      <p>PhaPl использует модифицированные SymPy, PyPy.js, MathJax, LZMA-JS. Полная информация об этом есть в <a href="https://github.com/phapl/phapl">репозитории с исходным кодом PhaPl</a>.</p>
+      <!-- %% pull license info from the sets -->
+      <p>PhaPl хочет быть свободным программным обеспечением, однако эта страница может включать наборы задач, ограничивающие возможность её распространения.</p>
     </div>
     <div class="container" id="phapl_div_choose">
       <h2>Выбор задачи</h2>
